added final changes

--- a/Rohit_Master_Thesis/0.Abstract.tex
+++ b/Rohit_Master_Thesis/0.Abstract.tex
@@ -8,6 +8,6 @@
 \normalfont
 \end{center}
 \sloppy
-The inspection of the solder joint in the manufacturing of printed circuit boards (PCBs), ensures the quality and reliability of the product. Traditionally, it is done by manual examination or by training a supervised machine learning model where an expert is used to label the dataset manually. This dependency on labeled data forms a bottleneck in efficiency and, hence, scaling in production. As PCB designs become more complex and the demand for shorter production cycles intensifies, innovative inspection methods must be developed to detect solder-joint defects without using an extensive prelabeled dataset.
+The inspection of the solder joint in the manufacturing of printed circuit boards (PCBs) ensures the quality and reliability of the product. Traditionally, automated optical inspection (AOI) machines are used to perform inspections using classical image processing techniques. However, these systems often generate a high number of false calls (FC), which necessitates manual intervention, leading to increased downtime. Subsequently, either a manual examination is required or a supervised machine learning model is trained, where an expert is used to label the dataset manually. This dependency on labeled data forms a bottleneck in efficiency and, hence, scaling in production. As PCB designs become more complex and the demand for shorter production cycles intensifies, innovative inspection methods must be developed to detect solder-joint defects without using an extensive prelabeled dataset.
 Our research addresses this challenge using unsupervised learning techniques for solder joint defect detection. We have leveraged the Anomalib library, a comprehensive collection of a wide range of anomaly detection algorithms, to implement and evaluate multiple models like PatchCore and DFM, among others. Our approach involves training or inferencing using these models on an image dataset of solder joints. The models then label the solder joints as normal or abnormal, with a corresponding prediction score for each image. This, therefore, removes the need for a manually labeled training dataset and can be more scalable and adaptable for inspection requirements on PCBs. The PatchCore model provided very promising results, showing an accuracy of 91.25\%.
 During the course of the thesis, we encountered few challenges that provided us with a lot of information regarding the practical application of these techniques. The most prominent ones are related to significant training times for some models, which may hinder their feasibility in real-time manufacturing environments. Looking towards future developments, a more extensive use of Vision Transformers will bring huge potential to this application. Although some ViT models are explored in our current work to some extent, there is much space for a more elaborate exploration of their potential in unsupervised defect detection. Further efforts could thus be oriented toward developing such models, optimized for faster training and inferencing times, and investigating their generalization capability for different solder joint defects.
