--- a/Rohit_Master_Thesis/3.Methodology.tex
+++ b/Rohit_Master_Thesis/3.Methodology.tex
@@ -233,11 +233,11 @@ A confusion matrix simply shows the predicted and actual classifications made by
 
 \begin{figure}[ht!]
     \centering
-    \includegraphics[width=1\linewidth]{Images/confusion matrix.png}
+    \includegraphics[width=1\linewidth]{Images/confusion_matrix_labeled.png}
     \caption{Example of Confusion Matrix}
     \label{fig:confusion matrix}
 \end{figure}
 
-Figure \ref{fig:confusion matrix} shows a confusion matrix from one of our models. Here, the \gls{tp} is the top-left corner dark blue cell, \gls{tn} is the bottom-right dark blue cell, \gls{fp} is the bottom-left light blue cell, and \gls{fn} is the upper-right light blue cell.
+Figure \ref{fig:confusion matrix} shows a confusion matrix. Here, the true positive is the number of normal images that are predicted correctly as normal. Similarly, true negative is the number of abnormal images predicted correctly as abnormal. False positive is the number of images that are abnormal but are wrongly predicted as normal, and false negative are the images that are normal but predicted as abnormal.
 
 
