--- a/Rohit_Master_Thesis/abbreviations.tex
+++ b/Rohit_Master_Thesis/abbreviations.tex
@@ -1,5 +1,5 @@
 \newabbreviation{pcb}{PCB}{Printed Circuit Board}
-\newabbreviation{fc}{FC}{Fully Connected}
+\newabbreviation{fc}{FC}{False Call}
 \newabbreviation{ng}{NG}{Not Good}
 \newabbreviation{gpu}{GPU}{Graphics Processing Unit}
 \newabbreviation{cpu}{CPU}{Central Processing Unit}
