--- a/Rohit_Master_Thesis/bibliography.bib
+++ b/Rohit_Master_Thesis/bibliography.bib
@@ -564,3 +564,38 @@
   url = {https://www.geeksforgeeks.org/supervised-unsupervised-learning/},
   year={2024}
 }
+
+@misc{yingxing2024,
+  author       = {Zhejiang Yingxing Technology Co., Ltd.},
+  title        = {What Is the Role of AOI Machines in the SMT Industry?},
+  year         = {2024},
+  url          = {https://www.zjyingxing.com/info/what-is-the-role-of-aoi-machines-in-the-smt-in-91506284.html}
+}
+
+@misc{ultralytics2024yolov5,
+  author       = {Ultralytics},
+  title        = {YOLOv5 Documentation},
+  year         = {2024},
+  url          = {https://docs.ultralytics.com/yolov5/},
+}
+
+@misc{ultralytics2024yolov6,
+  author       = {Ultralytics},
+  title        = {YOLOv6 Documentation},
+  year         = {2024},
+  url          = {https://docs.ultralytics.com/models/yolov6/},
+}
+
+@misc{ultralytics2024yolov7,
+  author       = {Ultralytics},
+  title        = {YOLOv7 Documentation},
+  year         = {2024},
+  url          = {https://docs.ultralytics.com/models/yolov7/},
+}
+
+@misc{ultralytics2024yolov8,
+  author       = {Ultralytics},
+  title        = {YOLOv8 Documentation},
+  year         = {2024},
+  url          = {https://docs.ultralytics.com/models/yolov8/},
+}
