Made all the final changes

--- a/Rohit_Master_Thesis/4.Results.tex
+++ b/Rohit_Master_Thesis/4.Results.tex
@@ -136,7 +136,7 @@ For the first configuration, we have used backbone \texttt{wide\_resnet50\_2} wi
 
 \begin{figure}[ht!]
     \centering
-    \includegraphics[width=1\linewidth]{Rohit_Master_Thesis//Images/patchcore_config1_confusion_matrix.jpg}
+    \includegraphics[width=1\linewidth]{Rohit_Master_Thesis//Images/patchcore_config1_confusion_matrix.png}
     \caption{Confusion matrix for the first configuration where backbone "Wide Resnet50" and layers "2, 3" were used.}
     \label{fig:patchcore config1 confusion matrix}
 \end{figure}
@@ -145,7 +145,7 @@ The second configuration resulted in the best overall performance across all met
 
 \begin{figure}[ht!]
     \centering
-    \includegraphics[width=1\linewidth]{Rohit_Master_Thesis//Images/patchcore_config2_confusion_matrix.jpg}
+    \includegraphics[width=1\linewidth]{Rohit_Master_Thesis//Images/patchcore_config2_confusion_matrix.png}
     \caption{Confusion matrix for the second configuration where backbone "Wide Resnet50" and layers "1, 2" were used.}
     \label{fig:patchcore config2 confusion matrix}
 \end{figure}
@@ -154,7 +154,7 @@ In the third configuration, layer 2, layer 3, and layer 4 were used for the back
 
 \begin{figure}[ht!]
     \centering
-    \includegraphics[width=1\linewidth]{Rohit_Master_Thesis//Images/patchcore_config3_confusion_matrix.jpg}
+    \includegraphics[width=1\linewidth]{Rohit_Master_Thesis//Images/patchcore_config3_confusion_matrix.png}
     \caption{Confusion matrix for the third configuration where backbone "Wide Resnet50" and layers "2, 3, 4" were used.}
     \label{fig:patchcore config3 confusion matrix}
 \end{figure}
