--- a/Rohit_Master_Thesis/MastersThesis.tex
+++ b/Rohit_Master_Thesis/MastersThesis.tex
@@ -91,7 +91,7 @@
       \textsf{
     \begin{center}
       %\vspace*{1cm}
-    \huge \textbf{Solder Inspection for Pseudo Error Reduction in Printed Circuit Board production using Unsupervised Learning} \\%TODO
+    \huge \textbf{Solder Inspection for Pseudo Error Reduction in Printed Circuit Board production using Unsupervised Learnings} \\%TODO
     \vspace{2cm}
     \LARGE\textbf{Master's Thesis}\\[5mm]
     \Large for the degree of \\[5mm]
